# agui

./: README.md  dev.bat  dev.ps1  setup-entra-auth.sh  setup-search-permissions.ps1
demo/: .gitignore  Dockerfile.python  README.md  docker-compose.yml  pyproject.toml  server.py
demo/backend/: pyproject.toml  server.py
demo/frontend/: index.html  package-lock.json  package.json
demo/frontend/src/: App.css  App.tsx  authConfig.ts  index.css  main.tsx
demo/frontend/src/components/: ClockCard.tsx  WeatherCard.tsx
demo/runtime/: package-lock.json  package.json
demo/runtime/src/: server.ts
docs/: AZURE_PERMISSIONS_SETUP.md
foundry/: .env.example  README.md  foundryiq.md  pyproject.toml  query_kb.py  query_kb.sh  upload-docs.sh
foundry/deploy/: setup-foundry-iq.sh
src/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile.node  README.md  dev.sh
src/backend/: Dockerfile  README.md  client.py  client_raw.py  config.py  pyproject.toml  server.py
src/backend/agents/: __init__.py  main_agent.py  middleware.py
src/backend/api/: app.py  routes.py
src/backend/auth/: __init__.py  entra.py  middleware.py  models.py
src/backend/tools/: __init__.py  a2a.py  calculator.py  catalog_search.py  preferences.py  quote.py  storyteller.py  time.py  weather.py
src/backend/utils/: __init__.py  logging.py
src/frontend/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/frontend/src/: App.css  App.tsx  useAuth.ts  vite-env.d.ts
src/runtime/: package-lock.json  package.json
src/runtime/src/: server.ts
(+5 files in other folders)
